--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,8 @@
 .container {
   padding: 0 2rem;
+  background: rgb(28,38,48);
+  background: linear-gradient(128deg, rgba(28,38,48,1) 0%, rgba(27,57,61,1) 100%);
+  color:#eaeaea
 }
 
 .main {
@@ -11,6 +14,25 @@
   justify-content: center;
   align-items: center;
 }
+
+.image_container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.image_wrapper{
+  box-shadow: 0px 0px 50px 5px rgba(0,0,0,0.38);
+  border-radius: 16px;
+}
+
+.image{
+  border-radius: 16px;
+}
+
 
 .footer {
   display: flex;
@@ -26,6 +48,13 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+}
+
+.email{
+  color: #eaeaea;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .title a {
@@ -82,7 +111,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 800px;
 }
 
 .card:hover,
