--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -16,22 +16,25 @@
 }
 
 .image_container{
+  max-width: 400px;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.image_wrapper{
   box-shadow: 0px 0px 50px 5px rgba(0,0,0,0.38);
   border-radius: 16px;
 }
 
+.image_wrapper{
+  display: flex;
+  justify-content: center;
+}
+
 .image{
   border-radius: 16px;
-  width: 400%;
+  width: 100%;
 }
 
 
