--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -172,6 +172,31 @@
   min-width: 190px;
 }
 
+.factcard_highlight_fake {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 2px solid #dd8e26;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  min-width: 190px;
+}
+
+.factcard_highlight_real {
+  margin: 1rem;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 2px solid #76b426;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+  min-width: 190px;
+}
+
+
 .card {
   margin: 1rem;
   padding: 1.5rem;
